Изменяет информацию в блоке давай познакомимся

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
       <h2 class="subheading">Давайте познакомимся</h2>
         <div class="container">
         <h3>Пара слов о себе</h3>
-        <p>Привет! Как вы уже поняли, я Замжицкий Алексей. Родилмя и вырос в славном городе Тула, для тех кто не знает это город-герой.<br>Учился в обычной школе №55, так же на базе этой школы окончил "Первый кадетский корпус спасателей".
-        и уже после этого поступил учится в КВАКУ (Коломенское военное командное училище). Так я оказался в Коломне, где нашел свою любимую супругу, которая родила мнепрекрасноосы сына Ярослава. </p>
+        <p>Привет! Как вы уже поняли, я Замжицкий Алексей. Родился и вырос в славном городе-герое Тула.<br>Учился в школе №55, так же на базе этой школы окончил "Первый кадетский корпус спасателей".
+        и уже после этого поступил в КВАКУ (Коломенское военное командное училище). Так я оказался в Коломне, где встретил свою любимую супругу, которая родила мне прекрасного сына Ярослава. <br>
+        Поменял много профессий, с другом открыли магазин автозапчастей, и начал учится программированию.</p>
         <h3>Чем могу быть полезен</h3>
-        <p>Очень надеюсь что уже изучил основы HTML и CSS, програмирование на JS и могу быть полезен в разработке и верстке сайтов.</p>
+        <p>Очень надеюсь что изучу основы HTML и CSS, програмирование на JS, и смогу быть полезен в разработке и верстке сайтов.</p>
         </div>
     </section>
 
