изменяет информацию в блоке

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container">
         <h3>Пара слов о себе</h3>
         <p>Привет! Как вы уже поняли, я Замжицкий Алексей. Родился и вырос в славном городе-герое Тула.<br>Учился в школе №55, так же на базе этой школы окончил "Первый кадетский корпус спасателей".
-        и уже после этого поступил в КВАКУ (Коломенское военное командное училище). Так я оказался в Коломне, где встретил свою любимую супругу, которая родила мне прекрасного сына Ярослава. <br>
+        и уже после этого поступил в КВАКУ (Коломенское высшее артиллерийское командное училище). Так я оказался в Коломне, где встретил свою любимую супругу, которая родила мне прекрасного сына Ярослава. <br>
         Поменял много профессий, с другом открыли магазин автозапчастей, и начал учится программированию.</p>
         <h3>Чем могу быть полезен</h3>
         <p>Очень надеюсь что изучу основы HTML и CSS, програмирование на JS, и смогу быть полезен в разработке и верстке сайтов.</p>
