--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="page-header">
       <div class="container">
-      <b> tel: +7 (929) 507-66-38 email: lextukol@mail.ru</b>
+      <a class="header-phone" href="tel: +79295076638">+7 (929) 507-66-38</a> <a class="header-email" href="mailto:lextukol@mail.ru">lextukol@mail.ru</a>
       </div>
     </header>
 
@@ -22,6 +22,9 @@
     </section>
 
     <section class="intro">
+      <figure class="user-image">
+        <img src="files/Рисунок1.png" width="900" height="600" alt="Фото Алексея Замжицкого">
+      </figure>
       <h2 class="subheading">Давайте познакомимся</h2>
         <div class="container">
         <h3>Пара слов о себе</h3>
@@ -36,9 +39,13 @@
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
+      <figure class="prodject-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Сайт магазина товаров для дома">
+      </figure>
 
       <h3>Магазин товаров для дома</h3>
       <p>Мой первый сайт.</p>
+      <a target="_blank" class="button" href="source/project-gloevk/index.html">Посмотреть</a>
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
@@ -47,7 +54,7 @@
 
     <footer class="page-footer">
       <div class="container"></div>
-      <b> email: lextukol@mail.ru tel: +7 (929) 507-66-38</b>
+      <a class="footer-phone" href="tel: +79295076638">+7 (929) 507-66-38</a> <a class="footer-email" href="mailto:lextukol@mail.ru">lextukol@mail.ru</a>
     </div>
     </footer>
   </body>
